--- a/views/contact.pug
+++ b/views/contact.pug
@@ -17,7 +17,7 @@ script(src='https://kit.fontawesome.com/9c5fe3b840.js' crossorigin='anonymous')
         li#right
           a(href='/')
             i.fa-regular.fa-circle-xmark.fa-xl
-    img(src='/static/Img/boy.png' alt='')
+    img(src='/static/images/boy.png' alt='')
 #section
   section
     h3 Thanks for taking the time to reach out. How can I help you today?
