--- a/views/index.pug
+++ b/views/index.pug
@@ -59,21 +59,21 @@ nav#navbar
         #dropdowncontent
           .rowcontent
             .cardcontent
-              img.card-img-top(src='/static/Img/TextUtils.png' alt='...')
+              img.card-img-top(src='/static/images/TextUtils.png' alt='...')
               .card-bodycontent
                 h3.card-titlecontent TextUtils
                 a.btn(href='https://text-utils-jade.vercel.app/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
             .cardcontent
-              img.card-img-top(src='/static/Img/PGLife.png' alt='...')
+              img.card-img-top(src='/static/images/PGLife.png' alt='...')
               .card-bodycontent
                 h3.card-titlecontent PG Life
                 a.btn(href='http://146.190.9.56/' target="_blank")
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
             .cardcontent
-              img.card-img-top(src='/static/Img//Gym.png' alt='...')
+              img.card-img-top(src='/static/images//Gym.png' alt='...')
               .card-bodycontent
                 h3.card-titlecontent Gym Website
                 a.btn(href='http://64.227.176.178:3000/' target="_blank")
@@ -105,7 +105,7 @@ main#main
           span
           |                             Visit Github
     .rightsection#reveal2
-      img(src='/static/Img/bg.png')
+      img(src='/static/images/bg.png')
   hr
   section.secondsection
     #Project
@@ -114,9 +114,9 @@ main#main
     .carousel.slide#carouselExample
       .carousel-inner
         .carousel-item.active
-          img.d-block.w-100(src='/static/Img/TextUtils.png' alt='...')
+          img.d-block.w-100(src='/static/images/TextUtils.png' alt='...')
           .card.carousel-img
-            img.card-img-top(src='/static/Img/TextUtils.png' alt='...')
+            img.card-img-top(src='/static/images/TextUtils.png' alt='...')
             .card.carousel-card  
               .card-body
                 h5.card-title
@@ -129,9 +129,9 @@ main#main
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
         .carousel-item
-          img.d-block.w-100(src='/static/Img//PGLife.png' alt='...')
+          img.d-block.w-100(src='/static/images//PGLife.png' alt='...')
           .card.carousel-img
-            img.card-img-top(src='/static/Img/PGLife.png' alt='...')
+            img.card-img-top(src='/static/images/PGLife.png' alt='...')
             .card.carousel-card
               .card-body
                 h5.card-title
@@ -144,9 +144,9 @@ main#main
                   | Visit 
                   i.fa-solid.fa-arrow-up-right-from-square
         .carousel-item
-          img.d-block.w-100(src='/static/Img/Gym.png' alt='...')
+          img.d-block.w-100(src='/static/images/Gym.png' alt='...')
           .card.carousel-img
-            img.card-img-top(src='/static/Img/Gym.png' alt='...')
+            img.card-img-top(src='/static/images/Gym.png' alt='...')
             .card.carousel-card
               .card-body
                 h5.card-title
@@ -195,7 +195,7 @@ footer
           i.fa-regular.fa-envelope
     p
       | Built from scratch 
-      img(src='/static/Img/heart.png' alt='...' loading='lazy')
+      img(src='/static/images/heart.png' alt='...' loading='lazy')
       |  &copy;
       |                     Copyright
       |                     2023 @Rex All rights Reserved
