--- a/views/submit.pug
+++ b/views/submit.pug
@@ -39,7 +39,7 @@ head
     bottom: 4px;
     }
 .container
-  img(src='/static/Img/checked.png' alt='')
+  img(src='/static/images/checked.png' alt='')
   h2 Thank You!
   h5 Your submission has been received.
 #footer-redirect
